--- a/notes/notes.tex
+++ b/notes/notes.tex
@@ -8,6 +8,20 @@
 \usepackage[margin=1.5cm]{geometry}
 \bibliographystyle{apalike}
 
+\DeclareMathOperator*{\argmin}{argmin}
+\DeclareMathOperator*{\argmax}{argmax}
+
+% Defining parameters
+\def \parts {60 }                  % Number of participants
+\def \fref #1{Figure \ref{#1}}     % Reference figures
+\def \tref #1{Table \ref{#1}}      % Reference tables
+\def \cents {20 }                  % Cents earned per mini-block
+\def \eref #1{Equation \ref{#1}}   % Reference equations
+\def \sref #1{Section '\nameref{#1}'}    % Reference sections
+\def \supmat {the Supplementary Materials}
+\def \excper {5 }     % Participants excluded because they cannot sort
+
+
 % Remember to start reftex-mode
 
 \begin{document}
@@ -69,7 +83,7 @@ Here I enumerate the things I need to learn and do in order to get this project 
   >{\hsize=.2\hsize\linewidth=\hsize}X}
 % {l|{\hsize=.4\hsize}X|{\hsize=0.3\hsize}X|{\hsize=0.3\hsize}X}
 End Date & Milestone & A priori comments & A posteriori comments \\ \hline \hline
-12.02.2021 & Learn about published models on arm-movement planning, especially those that can be used as generative models & & \\ \hline
+12.02.2021 & Learn about published models on arm-movement planning, especially those that can be used as generative models & & Discovered low-hanging fruit. Shifting directions a bit. See \ref{subsec:proposal}\\ \hline
 19.02.2021 & Learn about measures for how practiced a movement is. Reaction times? Speed profiles? Trajectories? & & \\\hline
 12.03.2021 & Implement the best model/s and do some testing as to its capabilities. & Without inference &   \\ \hline
 19.03.2021 & Add the sequential goals as another level in the hierarchy. & Still no inference. & \\ \hline
@@ -174,7 +188,7 @@ slow, which learn from this prediction error.
 
 Both slow and fast systems adapt with a similar rule:
 \[
-x_{f/s}(t + 1) = A_{f/s}x_{f/s}(t) + B_{f/s}e(n)c(n)^T
+x_{f/s}(t + 1) = A_{f/s}x_{f/s}(t) + B_{f/s}e(n)c(n)^T \label{eqn:lee-learn}
 \]
 where $x$ is a ``learning process'', $f/s$ refers to fast/slow (one equation
 each), and $A$ and $B$ are learning rates. $c(n)$ is the environment variable
@@ -191,6 +205,7 @@ y(t) = x_f(t) + x_s(t)c(t)^T
 \]
 
 \subsection{Proposal: Bayesian motor learner}
+\label{subsec:proposal}
 This model is a Bayesian alternative to the N-state learners from
 \cite{Lee_Dual_2009}. In this model, there is no need for explicit different
 timescales and multiple states; instead, the model relies on Bayesian learning
@@ -224,9 +239,11 @@ z_t)p(z_t|\theta_{t-1}, a_{t-1})$.
 
 Having inferred the generalized state (including context), a decision is made
 sampling from $p(a_t | z_t, \beta)$, which is a distribution that is assumed to
-be parametrized by $\beta$. These parameters can be updated via
-$q(\beta | z_t, \theta_{t+1}, a_t) \propto p(\theta_{t+1} | \beta, z_t,
-a_t)p(\beta)$
+be parametrized by $\beta$. These parameters can be updated via:
+\[
+q(\beta | z_t, \theta_{t+1}, a_t) \propto p(\theta_{t+1} | \beta, z_t,
+a_t)p(\beta) \label{eqn:update-parameters}
+\]
 
 \subsubsection{Expected results}
 I predict that this model will display all the experimental findings that other
@@ -399,6 +416,90 @@ In particular, [43] and [44] might be similar to the idea of inferring goals and
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\begin{chapter}{Testing the model in \ref{subsec:proposal}}
+In this section, I propose a simulated task in which the prowess of the model proposed in \ref{subsec:proposal} is put to the test. I additionally present simulation results and some writeup. Basically a mini-paper on this model.
+
+\section{The Task}
+The tasks used for models like this one are usually \citep[e.g.][]{Lee_Dual_2009} reaching tasks: a participant sits in front of a table with shoulders immobilized, and has to bring her hand from the starting position A to a designated position B. This is done while holding a robotic arm that moves with the hand. The robotic arm is used to create force fields in different directions (CW and CCW, typically, but it's basically left and right) for the different contexts. The position of the participant's arm is recorded and deviations from the straight line are considered as errors ($e(t)$ in \ref{eqn:lee-learn}).
+
+To simplify the task, I propose the following: participants need to keep their hand still in the starting position for the duration of the trial. The robotic arm creates forces that will drive the arm away from its current position by pushing in a constant direction with constant force. This experiment has the same elements as the one by \cite{Lee_Dual_2009} but eliminates the necessity of an underlying movement. While it works wonders as a thought experiment and helps me see if the proposed model behaves the way I want, it must not be used as a real experiment because participants could simply use impedance for each trial, regardless of context.
+
+In this experiment, every context $C_i$ is characterized by the strength and direction of its force: $C_i = \{\theta_i, \gamma_i\}$, where $i = 1, 2, ..., N_c$, $N_c$ is the number of contexts, $\theta$ is the angle of the force measured Cartesianly, and $w_i$ is the intensity of the force.
+
+As in \cite{Lee_Dual_2009}, I will simulate an A-B-clamp paradigm, which starts with a context $C_0 = \{0, 0\}$ in which no force is being applied. Then context $C_A$ is shown for a few trials, then context $C_B$, then an error-clamp block in which the hand is forced to stay at the initial position by the robotic arm.
+
+Additionally, a contextual cue $\omega$ is shown to the participant which signals the current context. The experiment will be run with different levels of reliability of this cue. Different sessions will be run with different cue reliabilities.
+
+An experimental session $\Xi$ is characterized by the reliability of the cue, the contexts avaiable and the order in which they are shown. In a given session, each trial begins with the cue and the XXX seconds during which the participant must keep the hand in the starting position. During the intertrial time, no forces are applied to the hand, but the hand must remain in the starting position.
+
+\section{The model}
+The model is an implementation of \ref{subsec:proposal}. The generalized state is given by:
+\[
+z_t = \{x, \theta_t, \gamma_t, \omega_t\}
+\]
+where $x$ is the current position of the hand in Cartesian coordinates, where the origin is the starting point. We assume that motor commands are issued every $\Delta t$ for simplicity. At the beginning of each time interval, the context is inferred combining the cue and the prediction error of the outcome of the previous motor command. We assume further than the cue and the force field are uncorrelated, which yields:
+\begin{align}
+  q(C_t) &= q(C_t | \omega_t)q(C_t | s_t, s_{t-1}, a_{t-1}) \\ \label{eqn:estimated-context}
+  q(C_t | \omega_t) &\propto p(\omega_t | C_t)p(C_t) \\
+  q(C_t | x_t, x_{t-1}, a_{t-1}) &\propto p(x_t | C_t, x_{t-1}, a_{t-1})p(x_t)p(x_{t-1})p(C_t)
+\end{align}
+The terms $p(C_t)$ refer to the prior probability of the context at the beginning of the trial: at the first trial, this refers to prior beliefs over which contexts are more common/likely. At each subsequent trial, it incorporates the belief that has so far been accumulated, given previous trials.
+
+Once the posterior over contexts has been calculated for the current trial, it is used to select the current context. A simple rule is to sample the context directly from the posterior distribution. However, a useful extension of this is to use a softmax function to create a distribution:
+
+\begin{equation}
+S(C^{(t)}) = \frac{e^{\kappa q\left(C^{(t)}\right)}}{\displaystyle \sum_{i=1}^{N_c}e^{\kappa q\left(C_i\right)}}
+\end{equation}
+where $q(C_i)$ is given by \eref{eqn:estimated-context}. The function $S(\cdot)$ is then used to sample the (inferred) current context. This representation has the advantage of adding a parameter with which the sampling behavior can be characterized, ranging from choosing uniformly when $\kappa = 0$ to choosing the context with the highest probability deterministically as $\kappa \rightarrow \infty$.
+
+In the case where the hand position can be determined by the participant with perfect accuracy (ignoring visual and proprioceptive error), we have that $p(x_\tau) = \delta(x_\tau, \hat x)$, where $\hat x$ is the real position of the hand, and $\delta (\cdot, \cdot)$ is the Kronecker delta function. We assume this to be the case during this experiment.
+
+For simplicity, we assume that participants know how many distinct contexts will be shown to them, and therefore all the $C_x$ have been created by the agent before the session begins. By default, all contexts assume a force with angle and magnitude equal zero, and their true values are learned during the experiment (see below).
+
+For mathematical tractability (i.e. to avoid circular distributions), we will limit contexts to one where the force points left (angle $\pi$) and one where the force points right (angle 0), in addition to the baseline context. In this scheme, participants need only learn the magnitude of the force for each context. We will assume that for each context, the prior distribution over the magnitude of the force is Gaussian:
+\[
+p(\gamma) = N(1, 0.1)
+\]
+We will show that the form of this prior affects learning rate, but not the final learned magnitude.
+
+After the generalized state has been inferred given the information at the beginning of the trial, the next step is to infer the parameters of the context, as in \eref{eqn:update-parameters}:
+\begin{equation}
+q(C_t | x_t, x_{t-1}, a_{t-1}) \propto p(x_t | x_{t-1}, a_{t-1}, C_t)p(C_t) \label{eqn:context-from-x}
+\end{equation}
+
+where $p(C_t)$ is either a prior belief of the likelihood of each context, or the probability inferred up to the previous trial. Note that, because we assumed that the position of the hand is directly observable without any noise, there are no terms for the uncertainty of $x_t$ or $x_{t-1}$.
+
+With this, \eref{eqn:context-from-x} becomes:
+\begin{equation}
+q(\gamma | x_t, x_{t-1}, a_{t-1}) \propto N(\hat x_t, \sqrt{\Delta t})p(\gamma) \label{eqn:data-dist}
+\end{equation}
+where $\hat x_t$ is the predicted value of the position $x_t$ given the previous state and action and the force field of the context; see \eref{eqn:dynamics} below. Because we chose the priors $p(\gamma)$ to be Gaussian, the posteriors $q(\gamma)$ after every trial will also be a Gaussian distribution with parameters:
+\begin{align}
+  \mu_\gamma^{(t)} &= \frac{\mu_\gamma^{(t-1)}\left(\sigma_\gamma^{(d)}\right)^2 + \mu_\gamma^{(d)}\left(\sigma_\gamma^{(t-1)}\right)^2}{\left(\sigma_\gamma^{(t-1)}\right)^2 + \left(\sigma_\gamma^{(d)}\right)^2} \\
+  \sigma_\gamma^{(t)} & = \sqrt{\frac{\left(\sigma_\gamma^{(t-1)}\right)^2\left(\sigma_\gamma^{(d)}\right)^2}{\left(\sigma_\gamma^{(t-1)}\right)^2 + \left(\sigma_\gamma^{(d)}\right)^2}}
+\end{align}
+where the superscripts $(t)$ and $(t-1)$ refer to the inferred values for the current and previous trials, respectively, and $(d)$ to the parameters in \eref{eqn:data-dist}.
+
+The final step is action selection. Action selection is done at the level of desired outcome (as opposed to motor commands) following the equations:
+\begin{align}
+  x_{t+1} &= x_t + a_t + f_t + \sqrt{\Delta t}\epsilon\\ \label{eqn:dynamics}
+  f_t &= \gamma_t (cos\theta_t, sin\theta_t) \\
+  a_t &= \argmax_{a_t}p(x_{t+1} = (0, 0) | x_t, a_t, f_t)
+\end{align}
+where $\gamma_t$ and $\theta_t$ are the participant's estimate of the parameters, given by \eref{eqn:estimated-context}. $\epsilon$ is a Gaussian motor error component.
+
+\section{Simulation results}
+
+\section{Conclusions}
+
+
+
+\end{chapter}
+
+
+
+
 
 
 \bibliography{../MyLibrary}
