Added RandomVariable. Not much else...

--- a/notes/notes.tex
+++ b/notes/notes.tex
@@ -345,7 +345,7 @@ learning, where getting out of a context means that adaptations are no longer
 used (and eventually are forgotten). Note: I need to read more on this
 phenomenon, as I might be misinterpreting what it means.
 
-Spontaneous recovery. In an A-B-error_clamp paradigm, in which during B the
+Spontaneous recovery. In an A-B-error\_clamp paradigm, in which during B the
 opposite adaptation to A is learned, at the beginning of the error-clamp phase
 (after B) participants seem to quickly gravitate towards A (thinking that A is
 now active?). This would be displayed by the model via the state inference, as
@@ -554,7 +554,7 @@ deceleration phase, making the speed profiles significantly skewed[88].''
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\begin{chapter}{Testing the model in \ref{subsec:proposal}}
+\begin{chapter}{Implementing the adaptation model}
 In this section, I propose a simulated task in which the prowess of the model proposed in \ref{subsec:proposal} is put to the test. I additionally present simulation results and some writeup. Basically a mini-paper on this model.
 
 \section{The Task}
